--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ footer{
 @media(max-width: 768px) {
     nav {
         padding: 5px; 
-	    display:relative;
+	position:static;
 	    
     }
 
