--- a/note.css
+++ b/note.css
@@ -67,7 +67,55 @@ textarea{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 
+@media only screen and (max-width: 768px) {
+    .note {
+        width: 60vh;
+        padding: 5%;
+    }
 
+    .submit {
+        width: 80%;
+    }
+
+    .noteop {
+        width: 60%;
+    }
+
+    .output {
+        flex-direction: column;
+        padding: 5%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .projectName {
+        font-size: 16px;
+        letter-spacing: 2px;
+    }
+
+    .note {
+        width: 80vh;
+        padding: 7%;
+    }
+
+    .noteop {
+        width: 80%;
+    }
+
+    .submit {
+        width: 90%;
+        padding: 8px;
+    }
+
+    .delete {
+        padding: 5px;
+    }
+
+    footer {
+        padding: 15px;
+    }
+}
+    
    
 }
 .output{
