--- a/ps.css
+++ b/ps.css
@@ -56,3 +56,47 @@ margin-bottom: 10%;
     font-size: 130%;
 
 }
+
+@media only screen and (max-width: 768px) {
+    .mainSection {
+        width: 80%;
+        padding: 20px;
+        margin-top: 5px;
+    }
+
+    .inputToCheck {
+        width: 80%;
+    }
+
+    .head {
+        font-size: 1.1em;
+    }
+
+    .overview {
+        font-size: 110%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .projName {
+        font-size: 18px;
+        letter-spacing: 2px;
+    }
+
+    .mainSection {
+        padding: 15px;
+        min-height: auto;
+    }
+
+    .inputToCheck {
+        width: 90%;
+    }
+
+    .head {
+        font-size: 1em;
+    }
+
+    .overview {
+        font-size: 100%;
+    }
+}
