--- a/calculator.css
+++ b/calculator.css
@@ -80,26 +80,21 @@ footer{
 }
 
 
-@media only screen and (max-width: 768px) {
-    .calculator {
-        width: 50%;
-        margin-top: 20%;
-    }
-
-    .buttons button {
-        width: 45%;
-    }
-}
-
 @media only screen and (max-width: 480px) {
     .calculator {
-        width: 80%;
+        width: 100vw;
         margin-top: 30%;
     }
 
+    .buttons {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
     .buttons button {
-        width: 90%;
-        padding: 10%;
+        width: calc(33.33% - 4%);
+        padding: 10px;
     }
 
     .projname {
