--- a/calculator.css
+++ b/calculator.css
@@ -22,7 +22,7 @@ body{
 
 .calc-box{
     width:100vw;
-    height: 80vh;
+    min-height: 80vh;
     margin: auto;
     box-shadow: 10px rgba(2,3,1,0.5);
    
@@ -36,7 +36,7 @@ body{
     margin:auto;
     margin-top: 10%;;
     width:20%;
-    height:63%;
+    min-height:63%;
     border:10px solid black;
     padding: 10px;
    
@@ -95,7 +95,8 @@ footer{
     .buttons {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        padding:20px;
     }
 
     .buttons button {
